Add null/empty validations to entities.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-# FIXME: Follow instructions to setup MySQL and add the following properties
-spring.datasource.url=jdbc:mysql://localhost:3306/JDND_C3
+spring.datasource.url=jdbc:mysql://localhost:3306/JDND_C3?createDatabaseIfNotExist=TRUE
 spring.datasource.username=course3
 spring.datasource.password=course3
 
