Configure Spring Mongo DB properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 # Don't let JPA/Hibernate create the schema
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
+
+spring.data.mongodb.uri=mongodb://course3:course3@localhost:27017/course3
